<resources>
    <string name="app_name">LaVilla</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_make_order_main">MakeOrderMain</string>
    <string name="make_order_main_activity">Make Order Main Activity!</string>
    <string name="pickup">PickUp</string>
    <string name="delivery">Delivery</string>
    <string name="what_do_you_want_to_do_today">What do you want to do today?</string>
    <string name="single_items">Single Items</string>
    <string name="entrees">Entrees</string>
    <string name="drinks">Drinks</string>
    <string name="itemname">itemName</string>
    <string name="_0_0">0.0</string>
    <string name="_0">0</string>
    <string name="your_order_has_been_sent">Your Order Has Been Sent!</string>
    <string name="status">Status</string>
    <string name="statusCode">STATUS..</string>
    <string name="Welcome">Welcome</string>
    <string name="title_activity_admin_options">admin_options</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
</resources>
