<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:layout_margin="7dp"
    app:cardCornerRadius="12dp"
    android:elevation="90dp"
    android:background="#A9A9A9">

    <RelativeLayout
        android:layout_width="444dp"
        android:layout_height="100dp"
        android:orientation="vertical">

        <ImageView
            android:id="@+id/item_img"
            android:layout_width="80dp"
            android:layout_height="80dp"
            android:layout_marginStart="10dp"
            android:layout_marginTop="10dp"

            android:gravity="center"
            android:src="@mipmap/ic_launcher_round"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/item_name" />

        <TextView
            android:id="@+id/item_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="130dp"
            android:gravity="center"
            android:text="@string/itemname"
            android:textSize="24sp"
            android:layout_marginTop="10dp"
            android:textColor="@color/cardview_dark_background"
            />

        <TextView
            android:id="@+id/item_price"
            android:layout_width="91dp"
            android:layout_height="wrap_content"
            android:layout_below="@+id/item_name"
            android:layout_marginStart="130dp"
            android:layout_marginTop="19dp"
            android:gravity="center"
            android:textColor="@color/cardview_dark_background"
            android:inputType="number"
            android:text="@string/_0_0"
            android:textSize="18sp" />

        <TextView
            android:id="@+id/qtyLabel"
            android:layout_width="58dp"
            android:layout_height="wrap_content"
            android:layout_below="@+id/item_name"
            android:layout_marginStart="270dp"
            android:layout_marginTop="19dp"
            android:gravity="center"
            android:textColor="@color/cardview_dark_background"
            android:text="Qty"
            android:textSize="18sp" />

        <TextView
            android:id="@+id/item_quantity"
            android:layout_width="52dp"
            android:layout_height="wrap_content"
            android:layout_below="@+id/item_name"
            android:layout_marginStart="3dp"
            android:layout_marginTop="19dp"
            android:layout_toEndOf="@id/qtyLabel"
            android:gravity="center"
            android:inputType="number"
            android:textColor="@color/cardview_dark_background"
            android:text="@string/_0"
            android:textSize="18sp" />
    </RelativeLayout>


</androidx.cardview.widget.CardView>